--- a/Android/Code/NDK/JNISample/app/src/main/res/layout/activity_main.xml
+++ b/Android/Code/NDK/JNISample/app/src/main/res/layout/activity_main.xml
@@ -12,89 +12,111 @@
         tools:context="com.ztiany.jni.sample.MainActivity"
         tools:ignore="HardcodedText">
 
-        <Button
+        <TextView
+            android:id="@+id/jniTvInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:textColor="@color/colorPrimaryDark" />
+
+        <Button
+            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:onClick="stringFromC"
             android:text="stringFromC"
             android:textAllCaps="false" />
 
-
         <Button
+            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
+            android:onClick="stringFromCReflection"
+            android:text="stringFromCReflection"
+            android:textAllCaps="false" />
+
+        <Button
+            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:onClick="encryption"
+            android:text="stringOperation"
+            android:textAllCaps="false" />
+
+        <Button
+            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:onClick="intFromC"
             android:text="intFromC"
             android:textAllCaps="false" />
 
-
         <Button
+            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:onClick="addArray"
             android:text="addArray"
             android:textAllCaps="false" />
 
-
         <Button
+            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:onClick="bubbleSort"
             android:text="bubbleSort"
             android:textAllCaps="false" />
 
-
         <Button
+            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:onClick="encryption"
-            android:text="encryption"
-            android:textAllCaps="false" />
-
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:onClick="stringFromC"
-            android:text="stringFromC"
-            android:textAllCaps="false" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:onClick="callJava"
             android:text="callJava"
             android:textAllCaps="false" />
 
         <Button
+            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:onClick="throwError"
             android:text="throwError"
             android:textAllCaps="false" />
 
         <Button
+            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:onClick="dynamicRegisterFromJni"
             android:text="dynamicRegisterFromJni"
             android:textAllCaps="false" />
 
         <Button
+            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:onClick="pThread"
             android:text="pThread"
+            android:textAllCaps="false" />
+
+        <Button
+            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:onClick="javaCrash"
+            android:text="trigger java crash"
             android:textAllCaps="false" />
 
     </LinearLayout>
