--- a/Android/Code/FFmpeg/DNFFmpegPlayer/app/src/main/res/layout/activity_main.xml
+++ b/Android/Code/FFmpeg/DNFFmpegPlayer/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <EditText
+        android:id="@+id/etUrl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:importantForAutofill="no"
+        android:inputType="textUri"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnSelectFile"
+        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="选择"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etUrl"
+        tools:ignore="HardcodedText" />
+
     <Button
         android:id="@+id/btnStart"
         style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
@@ -16,7 +38,7 @@
         android:text="开始"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSelectFile"
         tools:ignore="HardcodedText" />
 
     <SurfaceView
